Updating Docs for version 0.3.0

--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -79,7 +79,7 @@ plot(Harsha_Multiple)
 #### Type of Algorithm
 ```{r,results='hide', message=FALSE, warning=FALSE}
 Harsha_PC <- wq_calc(Harsha,
-                     alg = "phycocyanin", 
+                     alg = "chlorophyll", 
                      sat = "sentinel2")
 ```
 ```{r, fig.height = 5, fig.width = 6}
