Continued transition to terra

--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -54,8 +54,8 @@ The main function of this package is called `wq_calc()` which calculates water q
 #### Single Algorithm
 ```{r, results='hide', message=FALSE, warning=FALSE}
 library(waterquality)
-library(raster)
-Harsha <- stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
+library(terra)
+Harsha <- terra::rast(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 ```
 ```{r,results='hide', message=FALSE, warning=FALSE}
 Harsha_Am092Bsub <- wq_calc(raster_stack = Harsha, 
@@ -110,13 +110,13 @@ This function wraps the ["tmap"](https://cran.r-project.org/package=tmap) packag
 #### Raster with points
 ```{r, results='hide', message=FALSE, warning=FALSE}
 library(waterquality)
-library(raster)
+library(terra)
 library(tmap)
 library(sf)
-s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
+s2 = terra::rast(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 MM12NDCI = wq_calc(s2, alg = "MM12NDCI", sat = "sentinel2")
-samples = st_read(system.file("raster/Harsha_Simple_Points_CRS.gpkg", package = "waterquality"))
-lake_extent = st_read(system.file("raster/Harsha_Lake_CRS.gpkg", package = "waterquality"))
+samples = terra::vect(system.file("raster/Harsha_Simple_Points_CRS.gpkg", package = "waterquality"))
+lake_extent = terra::vect(system.file("raster/Harsha_Lake_CRS.gpkg", package = "waterquality"))
 ```
 
 ```{r,fig.height = 5, fig.width = 6}
@@ -165,13 +165,13 @@ Additionally, we have provided code that might be useful to help users import an
 
 ```{r, eval = FALSE}
 #Input raster image
-wq_raster <- stack("C:/temp/my_raster.tif")
+wq_raster <- terra::rast("C:/temp/my_raster.tif")
 
 #Input shapefile
-wq_samples <- shapefile('C:/temp/my_samples.shp')
+wq_samples <- terra::vect('C:/temp/my_samples.shp')
 
 #Extract values from raster and combine with shapefile
-waterquality_data <- data.frame(wq_samples, extract(wq_raster, wq_samples))
+waterquality_data <- data.frame(wq_samples, terra::extract(wq_raster, wq_samples))
 
 #Export results as csv file
 write.csv(waterquality_data, file = "C:/temp/waterquality_data.csv")
