--- a/README.Rmd
+++ b/README.Rmd
@@ -51,7 +51,7 @@ The main function in this package is `wq_calc()`:
 ```{r example_code, fig.asp=0.33, results='hide', message=FALSE, warning=FALSE}
 library(waterquality)
 library(terra)
-s2 = rast(system.file("raster/S2_Harsha.tif", package = "waterquality"))
+s2 = terra::rast(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 s2_two_alg = wq_calc(s2, alg = c("MM12NDCI", "Al10SABI"), sat = "sentinel2")
 ```
 ```{r example_output, fig.asp=0.33}
