--- a/README.Rmd
+++ b/README.Rmd
@@ -52,10 +52,16 @@ The main function in this package is `wq_calc()`:
 library(waterquality)
 library(terra)
 s2 = terra::rast(system.file("raster/S2_Harsha.tif", package = "waterquality"))
-s2_two_alg = wq_calc(s2, alg = c("MM12NDCI", "Al10SABI"), sat = "sentinel2")
+MM12NDCI = wq_calc(s2, alg = "MM12NDCI", sat = "sentinel2")
+samples = terra::vect(system.file("raster/Harsha_Simple_Points_CRS.gpkg", package = "waterquality"))
 ```
-```{r example_output, fig.asp=0.33}
-plot(s2_two_alg)
+```{r,fig.height = 5, fig.width = 6}
+Map_WQ_raster(WQ_raster = MM12NDCI,
+              sample_points = samples,
+              map_title= "Water Quality Map",
+              raster_style = "quantile",
+              histogram = TRUE)
+
 ```
 
 
