--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -35,9 +35,9 @@ The final outputs are raster stacked images which represent relative index value
 
 ### wq_calc()
 
-The main function of this package is called `wq_calc()` which calculates water quality indices by using a reflectance raster stack as an input, user-defined algorithm(s) selection, and satellite configuration selection corresponding to the following three arguments: `raster_stack`, `alg`, and `sat`.
+The main function of this package is called `wq_calc()` which calculates water quality indices by using a reflectance raster stack as an input, user-defined algorithm(s) selection, and satellite configuration selection corresponding to the following three arguments: `terraRast`, `alg`, and `sat`.
 
-- `raster_stack` - The input reflectance image to be used in band algorithm calculation. 
+- `terraRast` - The input reflectance image to be used in band algorithm calculation. 
 - `alg` - Determines the indices to be utilized:
     - Single Algorithm
     - Multiple Algorithm
@@ -58,22 +58,22 @@ library(terra)
 Harsha <- terra::rast(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 ```
 ```{r,results='hide', message=FALSE, warning=FALSE}
-Harsha_Am092Bsub <- wq_calc(raster_stack = Harsha, 
-                            alg = "Am092Bsub", 
+Harsha_Am092Bsub <- wq_calc(terraRast = Harsha, 
+                            alg = "MM12NDCI", 
                             sat = "sentinel2")
 ```
 ```{r, fig.height = 5, fig.width = 6}
-plot(Harsha_Am092Bsub)
+terra::plot(Harsha_Am092Bsub)
 ```
   
 #### Multiple Algorithms
 ```{r,results='hide', message=FALSE, warning=FALSE}
-Harsha_Multiple <- wq_calc(raster_stack = Harsha,
-                           alg = c("Am092Bsub", "MM12NDCI", "Da052BDA"), 
+Harsha_Multiple <- wq_calc(terraRast = Harsha,
+                           alg = c("MM12NDCI", "Am092Bsub", "Da052BDA"), 
                            sat = "sentinel2")
 ```
 ```{r, fig.height = 5, fig.width = 6}
-plot(Harsha_Multiple) 
+terra::plot(Harsha_Multiple) 
 ```
   
 #### Type of Algorithm
@@ -83,7 +83,7 @@ Harsha_PC <- wq_calc(Harsha,
                      sat = "sentinel2")
 ```
 ```{r, fig.height = 5, fig.width = 6}
-plot(Harsha_PC) 
+terra::plot(Harsha_PC) 
 ```
   
 #### All Algorithms
@@ -93,7 +93,7 @@ Harsha_All <- wq_calc(Harsha,
                       sat = "sentinel2")
 ```
 ```{r,fig.height = 5, fig.width = 6}
-plot(Harsha_All) # Only displays first 16 of 28
+terra::plot(Harsha_All) # Only displays first 16 of 28
 ```
   
   
