--- a/README.Rmd
+++ b/README.Rmd
@@ -60,6 +60,13 @@ Map_WQ_raster(WQ_raster = MM12NDCI,
               histogram = TRUE)
 ```
 
+## Citation
+To cite waterquality in publications, please use:
+
+Johansen R, Nowosad J, Reif M, Emery E (2023). waterquality: Satellite Derived Water Quality Detection Algorithms.
+U.S Army Engineer Research and Development Center, Vicksburg, MS, USA. R package version 1.0.0,
+https://github.com/RAJohansen/waterquality/.
+
 ## Package Contributions
 
 We encourage users to submit issues and enhancement requests so we may continue to improve our package. 
